# tutorial-transformers

./: .gitignore  main.py  pyproject.toml
CH03/: CH03a_BERT_As_one_of_Autoencoding_Language_Models.ipynb  CH03b_Other_Autoencoding_Models.ipynb  CH03c_Tokenization_Algorithms.ipynb
CH03/tokenizer/: vocab.txt
